fix et deploy du dark mode pour Gh pages

--- a/src/css/custom/nifStyles.css
+++ b/src/css/custom/nifStyles.css
@@ -8,7 +8,7 @@ html {
 }
 
 [data-theme="dark"] body {
-    background: var(--bulma-body-background-color);
+    background-color: var(--bulma-body-background-color);
 }
 
 .section{
